# Copyright (C) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

config("cert_manager_config") {
  include_dirs = [ "cm_ipc" ]
}

ohos_static_library("libcm_service_idl_standard_static") {
  subsystem_name = "security"
  part_name = "certificate_manager"
  public_configs = [ ":cert_manager_config" ]
  branch_protector_ret = "pac_ret"
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    boundary_sanitize = true
    debug = false
    integer_overflow = true
    ubsan = true
  }
  include_dirs = [
    "../../../../../../interfaces/innerkits/cert_manager_standard/main/include",
    "../../../../cert_manager_engine/main/core/include",
  ]
  defines = [
    "L2_STANDARD",
    "_CM_LOG_ENABLE_",
  ]
  sources = [
    "cm_ipc/cm_ipc_service.c",
    "cm_ipc/cm_ipc_service_serialization.c",
    "cm_ipc/cm_response.cpp",
  ]
  deps = [
    "../../../../../../frameworks/cert_manager_standard/main/common:libcert_manager_common_standard_static",
    "../../../../../../frameworks/cert_manager_standard/main/os_dependency:libcert_manager_log_mem_static",
    "../../hisysevent_wrapper:libcert_manager_hisysevent_wrapper_static",
    "../../security_guard_report:libcert_manager_sg_report_static",
  ]
  external_deps = [
    "c_utils:utils",
    "huks:libhukssdk",
    "ipc:ipc_core",
    "openssl:libcrypto_shared",
    "os_account:os_account_innerkits",
  ]

  if (support_jsapi) {
    external_deps += [
      "access_token:libaccesstoken_sdk",
      "os_account:os_account_innerkits",
    ]
    defines += []
  }

  cflags_cc = [
    "-DHILOG_ENABLE",
    "-Wall",
    "-Werror",
  ]
  cflags = cflags_cc
  complete_static_lib = true
}
